# XML

./: exam.md  pairing.md  tasks.md
EML/: EML.opam  dune-project  out.ll
EML/lib/: dune
EML/lib/backend/llvm/: architecture.ml  generator_state.ml  runner.mli
EML/lib/backend/llvm_ir/: analysis.ml  analysis.mli  architecture.ml  architecture.mli  generator.ml  generator.mli  generator_state.ml  generator_state.mli  runner.ml
EML/lib/backend/ricsv/: analysis.ml  analysis.mli  architecture.ml  architecture.mli  auxillary.ml  auxillary.mli  config.ml  generator.ml  generator.mli  generator_state.ml  generator_state.mli  runner.ml  runner.mli
EML/lib/frontend/: ast.ml  binutils.ml  binutils.mli  inferencer.ml  inferencer.mli  parser.ml  parser.mli  runner.ml  runner.mli
EML/lib/middleend/: anf.ml  anf.mli  anf_pp.ml  anf_pp.mli  cc.ml  cc.mli  inferencer.ml  inferencer.mli  ll.ml  ll.mli  runner.ml  runner.mli
EML/lib/runtime/: dune  llvm_call.S  llvm_runtime.c  primitives.ml  primitives.mli  riscv_runtime.c  runtime.c
EML/lib/util/: monads.ml  utils.ml
EML/lib/utils/: helpers.ml  helpers.mli  monads.ml  monads.mli  pretty_printer.ml  pretty_printer.mli
EML/tests/: Makefile  anf_tests.ml  anf_tests.mli  cc_tests.ml  closure_tests.t  dune  gc_tests.t  infer.t  inferencer_tests.ml  inferencer_tests.mli  ll_tests.ml  ll_tests.mli  llvm.t  llvm_tests.ml  llvm_tests.mli  many_tests  parser_tests.ml  parser_tests.mli  riscv.t  riscv_tests.ml  riscv_tests.mli  tuple_tests.t
EML/tests/additional_tests/: mangling_test.ml
EML/tests/gc_tests/closure/: 01_add5_staged_partial_gc.ml  02_affine_live_dead_gc.ml  03_add10_staged_partial_gc.ml
EML/tests/gc_tests/tuple_tests/: 01adder.ml  03args.ml
EML/tests/tuple_tests/: 01adder.ml  02nested.ml  03args.ml
XML/: .clang-format  .gitignore  .zanuda  Makefile  XML.opam  XML.opam.template  dune-project
XML/lib/backend/: codegen.ml  codegen.mli  codegen_llvm.ml  codegen_llvm.mli  dune  emission.ml  emission.mli  machine.ml  machine.mli  optimize.ml  optimize.mli  state.ml  state.mli  target.ml  target.mli
XML/lib/common/: ast.ml  ast.mli  parser.ml  parser.mli  pprinter.ml  pprinter.mli
XML/lib/middleend/: anf.ml  anf.mli  cc.ml  cc.mli  dune  infer.ml  infer.mli  inferLayers.ml  inferLayers.mli  inferTypes.ml  ll.ml  ll.mli  pprinter.ml  pprinter.mli
XML/many_tests/: cc.t  codegen.t  codegen_llvm.t  codegen_operators.t  compiler.ml  dune  gc.t  gc_llvm.t  infer.t  llvm_tweaks.t  optimization_diff.t  unoptimized_codegen.t
XML/many_tests/qcheck/: ast_qcheck.t  dune  machine_qcheck.t  run_ast_qcheck.ml  run_machine_qcheck.ml
XML/many_tests/unit/: anf.ml  cc.ml  cc.mli  codegen_llvm.ml  dune  infer.ml  ll.ml  machine.ml  parser_infixop.ml
XML/repl/: REPL.ml
XML/runtime-ci-script/: format.sh
XML/test_qc/: test_qc.ml
