opam-version: "2.0"
synopsis: "A short LLVM demo"
maintainer: ["Victoria Ostrovskaya & Danil Usoltsev"]
authors: ["Victoria Ostrovskaya & Danil Usoltsev"]
license: "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/Kakadu/comp24"
bug-reports: "https://github.com/Kakadu/comp24/issues"
depends: [
  "ocaml"
  "dune" {>= "3.8" & = "3.19.1"}
  "angstrom" {= "0.16.0"}
  "qcheck"
  "bisect_ppx"
  "ppx_expect"
  "llvm" {= "18-shared"}
  "qcheck" {with-tests}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/Kakadu/comp24.git"
depexts: [
  [ "llvm-18-dev" "clang" "gcc-riscv64-linux-gnu" "qemu-user" ] {os-distribution = "ubuntu"}
]
