(lang dune 3.8)

(name EML)

(generate_opam_files false)

(source
 (github Kakadu/comp24))

(authors "Victoria Ostrovskaya & Danil Usoltsev")

(maintainers "Victoria Ostrovskaya & Danil Usoltsev")

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")



; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
