(library
 (name tests)
 (libraries EML_lib)
 (modules :standard)
 (preprocess
  (pps ppx_deriving.show ppx_expect))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to riscv)
 (deps
  (package EML)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))

(cram
 (applies_to gc_tests)
 (deps
  (package EML)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))
