(library
 (name tests)
 (libraries EML_lib)
 (modules :standard)
 (preprocess
  (pps ppx_deriving.show ppx_expect))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to riscv)
 (deps
  (file ../bin/EML.exe)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))

(cram
 (applies_to infer)
 (deps
  (file ../bin/EML.exe)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))

(cram
 (applies_to closure_tests)
 (deps
  (file ../bin/EML.exe)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))

(cram
 (applies_to tuple_tests)
 (deps
  (file ../bin/EML.exe)
  (file Makefile)
  (file ../lib/runtime/rv64_runtime.a)
  (source_tree gc_tests)
  (source_tree many_tests)))

;; LLVM tests require clang to be installed (e.g. apt-get install clang).

(cram
 (applies_to llvm)
 (deps
  (file ../bin/EML.exe)
  (file Makefile)
  (source_tree many_tests)))
