(library
 (name backend)
 (public_name XML.Backend)
 (modules codegen codegen_llvm emission machine target optimize)
 (libraries
  angstrom
  base
  llvm
  llvm.analysis
  llvm.executionengine
  llvm.passbuilder
  llvm.all_backends
  stdio
  XML.Common
  XML.Middleend)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_qcheck ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))
